--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mocha": "^7.1.0"
   },
   "dependencies": {
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "request":"*"
   }
 }
